# RadialDock

./: .cursorrules  .gitignore  README.md  build.ps1  dev.bat  dev.ps1  pyproject.toml  rebuild_reinstall.sh  requirements-lock.txt  requirements.txt
.github/: FUNDING.yml
.radialdock/: config.json
docs/: DEV_PLAN.md  JOURNAL.md  ai-change-checklist.md  architecture.md  cursor-guidance.md  dev-workflow.md
scripts/: dev_watch.py
src/radialdock/: __init__.py  app.py  cache.py  install.py  model.py  recent_items.py  shell_open.py  win_hotkey.py
src/radialdock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ui/: FolderView.qml  Main.qml  RadialRing.qml  Settings.qml  Tile.qml
