[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radialdock"
version = "0.1.0"
description = "Windows 11 radial dock launcher built with PySide6 + QML."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7",
  "pywin32>=306",
  "watchdog>=4.0",
  "pillow>=10.4",
  "pyinstaller>=6.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
